# Astral-Creative-Suite

./: .gitignore  .gitmodules  AAA_ENGINE_UPGRADE_SUMMARY.md  ASTRAL_ENGINE_ANALIZ_RAPORU.md  CMakeCache.txt  CMakeLists.txt  MATERIAL_SYSTEM_MIGRATION.md  README.md  REFACTORING_GUIDE.md  SHADOW_MAPPING_UPGRADE.md  WARP.md  build_msvc.bat  compile_shaders.bat
.qoder/rules/: role.md
assets/models/: cube.mtl
docs/: ASTRAL_CREATIVE_SUITE.md  CODE_QUALITY_IMPROVEMENTS.md  ENHANCED_ASSET_LOADING.md  Project_brief.md  RendererRefactor.md
shaders/: 2d_brush.frag  2d_brush.vert  2d_canvas.frag  2d_canvas.vert  2d_grid.frag  2d_grid.vert  basic.vert  pbr.vert  shader.vert  shadow_depth.vert  shadow_null.frag  triangle.vert  triangle.vert.spv  unified_pbr.frag  unified_pbr.vert
shaders/include/: common.glsl
src/: 3d_editor_main.cpp  CMakeLists.txt  MinimalRenderer.cpp  MinimalRenderer.h  TestMaterial.cpp  editor_main.cpp  main.cpp  test_renderer.cpp
src/2D/: CMakeLists.txt
src/2D/Canvas/: Canvas.cpp  Canvas.h
src/2D/Layers/: Layer.cpp  Layer.h
src/2D/Tools/: Brush.cpp  Brush.h  Tool.cpp  Tool.h
src/3D/: CMakeLists.txt  Components3D.h  Render3DSystem.cpp  Render3DSystem.h
src/Asset/: CMakeLists.txt  ImageAssetManager.cpp  ImageAssetManager.h  MaterialAsset.cpp  MaterialAsset.h  MeshAsset.cpp  MeshAsset.h  ModelAsset.cpp  ModelAsset.h  ModelLoader.cpp  ModelLoader.h
src/Core/: AssetDependency.cpp  AssetDependency.h  AssetLocator.cpp  AssetLocator.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  Common.h  ConfigManager.cpp  ConfigManager.h  EngineConfig.cpp  EngineConfig.h  Logger.cpp  Logger.h  MemoryManager.cpp  MemoryManager.h  PerformanceMonitor.cpp  PerformanceMonitor.h  ThreadPool.cpp  ThreadPool.h
src/ECS/: ArchetypeECS.cpp  ArchetypeECS.h  CMakeLists.txt  Components.cpp  Components.h  ECS.h  ECSTest.cpp  ECSTest.h  Entity.cpp  Entity.h  RenderComponents.h  Scene.cpp  Scene.h  Systems.h
src/Events/: ApplicationEvent.h  CMakeLists.txt  Event.h  EventManager.cpp  EventManager.h  Events.h  InputEvent.h  SystemEvent.h
src/Platform/: CMakeLists.txt  Window.cpp  Window.h
src/Renderer/: CMakeLists.txt  Camera.cpp  Camera.h  MaterialShaderManager.cpp  MaterialShaderManager.h  Model.cpp  Model.h  PipelineConfig.cpp  PipelineConfig.h  README.md  RRenderer.cpp  RRenderer.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  RendererComponents.h  Shader.cpp  Shader.h  ShaderHotReload.cpp  ShaderHotReload.h  ShadowMapping.cpp  ShadowMapping.h  Texture.cpp  Texture.h  UnifiedMaterial.cpp  UnifiedMaterial.h  UnifiedMaterialConstants.cpp  UnifiedMaterialConstants.h  VMA_Implementation.cpp
src/Renderer/2D/: CanvasRenderer.cpp  CanvasRenderer.h
src/Renderer/3D/: SceneRenderer.cpp  SceneRenderer.h
src/Renderer/Vulkan/: DescriptorSetManager.cpp  DescriptorSetManager.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanUtils.cpp  VulkanUtils.h
src/Renderer/VulkanR/: VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanValidation.h
src/Tests/: UnifiedMaterialTest.cpp
src/UI/: CMakeLists.txt  UIManager.cpp  UIManager.h
